# loggerhead

./: .bzrignore  .gitignore  .project  .pydevproject  .testr.conf  .travis.yml  Cargo.toml  Dockerfile  HACKING  HACKING.rst  MANIFEST.in  Makefile  NEWS  README  README.md  README.mod_wsgi  README.rst  README.txt  __init__.py  apache-loggerhead.conf  bazaar.conf  byov.conf  dev.cfg  dotted_revno_caching.txt  history_db.py  history_denormalization.txt  info.py  load_test.script  loggerhead-serve  loggerhead-serve.1  loggerhead.conf  loggerhead.conf.example  loggerhead.wsgi  loggerheadd  push-website  pyproject.toml  requirements.txt  sample-prod.cfg  schema.py  serve-branches  (+17 more)
.bzr-builddeb/: default.conf
.github/workflows/: publish.yaml  test.yaml
debian/: README.Debian  bzr-builddeb.conf  changelog  conffiles  control  copyright  dirs  examples  install  loggerhead-breezy-doc.doc-base  loggerhead-breezy-doc.install  loggerhead-breezy-doc.links  loggerhead-breezy.install  loggerhead-breezy.links  loggerhead-doc.doc-base  loggerhead-doc.links  loggerhead.conf  loggerhead.default  loggerhead.init  loggerhead.install  loggerhead.service  logrotate  postinst  postrm  prerm  rules  update-deps.py  watch
debian/patches/: 01_fix_annotate_tests  debian-changes-1.17+bzr424-1  dont-ship-static.patch  fix-test-load_test-failures.patch  html-escape.patch  isalive.patch  jquery.patch  paths.patch  port-to-yui3.5.patch  read-version-from-pyproject-toml.patch  request-method.patch  series  static-path.patch  version.patch
debian/tests/: control  testsuite
debian/upstream/: metadata
docs/: Makefile  book.toml  conf.py  index.rst  loggerhead-serve.rst  make.bat  serve-branches.rst  start-loggerhead.rst  stop-loggerhead.rst
docs/src/: SUMMARY.md  getting-started.md  introduction.md  loggerhead-serve.md  running-behind-a-proxy.md  searching.md
homepage/: index.html  loggerhead.css
load_test_scripts/: multiple_instances.script
loggerhead/: TODO  __init__.py  __main__.py  branchview.py  changecache.py  config.py  daemon.py  exporter.py  graphcache.py  highlight.py  history.py  history2.py  history_db.py  history_db_schema.py  load_test.py  lockfile.py  lsprof.py  main.py  model.py  profile.py  release.py  search.py  templatefunctions.py  textindex.py  trace.py  util.py  wholehistory.py  wsgiapp.py  zptsupport.py
loggerhead/apps/: __init__.py  branch.py  config.py  error.py  filesystem.py  http_head.py  transport.py
loggerhead/config/: app.cfg  log.cfg
loggerhead/controllers/: __init__.py  annotate_ui.py  atom_ui.py  bundle_ui.py  changelog_ui.py  diff_ui.py  directory_ui.py  download_ui.py  error_ui.py  filediff_ui.py  inventory_ui.py  revision_ui.py  revlog_ui.py  search_ui.py  view_ui.py
loggerhead/middleware/: profile.py
loggerhead/static/css/: annotate.css  diff.css  files.css  global.css  highlight.css  launchpad_slimmer.css  style.css  view.css  zptstyle.css
loggerhead/static/javascript/: changelog.js  collapse.js  custom.js  diff.js  mootools-1.2-more.js  privacy.js  sorting_table.js
loggerhead/templates/: annotate.kid  annotate.pt  atom.kid  atom.pt  branchinfo.pt  breadcrumbs.pt  browse.kid  browse.pt  changelog.kid  changelog.pt  collapse-all-button.pt  collapse-button.pt  directory.pt  error.pt  feed-link.pt  filediff.pt  footer.pt  inventory.kid  inventory.pt  macros.pt  master.kid  master.pt  menu.pt  modified-file-link-log.pt  modified-file-link-rev.pt  navigation.pt  revision.kid  revision.pt  revisionfilechanges.pt  revisioninfo.pt  revlog.pt  search-box.pt  search.pt  view.pt
loggerhead/tests/: __init__.py  fixtures.py  simple.pt  test_controllers.py  test_corners.py  test_filechangecache.py  test_highlight.py  test_history.py  test_hooks.py  test_http_head.py  test_importer.py  test_inventory_ui.py  test_load_test.py  test_model.py  test_revision_ui.py  test_simple.py  test_templating.py  test_upgrade.py  test_util.py
src/: app.rs  config.rs  highlight.rs  history.rs  lib.rs  main.rs
src/breezy/: mod.rs
src/cache/: disk.rs  mod.rs
src/controllers/: annotate.rs  atom.rs  changelog.rs  diff.rs  directory.rs  download.rs  filediff.rs  inventory.rs  json.rs  mod.rs  revision.rs  revlog.rs  search.rs  view.rs
src/util/: errors.rs  fmt.rs  mod.rs
static/css/: diff.css  global.css
static/javascript/: custom.js
templates/: annotate.html  base.html  changelog.html  directory.html  error.html  filediff.html  inventory.html  revision.html  revlog.html  search.html  view.html
tox-scripts/: py27-install
turbosimpletal/: __init__.py  zptsupport.py
turbosimpletal/tests/: test_zpt.py
turbozpt/: __init__.py  template.py  zptsupport.py
turbozpt/tests/: test_zpt.py
