[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "loggerhead"
version = "2.0.3"
description = "Loggerhead is a web viewer for projects in bazaar"
license = {text = "GNU GPL v2 or later"}
maintainers = [{name = "Michael Hudson", email = "michael.hudson@canonical.com"}]
dependencies = [
    "Chameleon",
    "Paste>=1.6",
    "bleach",
    "breezy>=3.1",
    "packaging",
    "pygments",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.optional-dependencies]
proxied = ["PasteDeploy>=1.3"]
flup = ["flup"]
dev = ["fixtures", "testtools", "testscenarios"]

[tool.setuptools]
script-files = ["loggerhead-serve"]
packages = [
    "breezy.plugins.loggerhead",
    "loggerhead",
    "loggerhead.apps",
    "loggerhead.controllers",
    "loggerhead.middleware",
    "loggerhead.templates",
]
package-dir = {"breezy.plugins.loggerhead" = "."}
include-package-data = false

[project.urls]
repository = "https://launchpad.net/loggerhead"

[tool.setuptools.data-files]
"share/man/man1" = ["loggerhead-serve.1"]
"share/doc/loggerhead" = [
    "apache-loggerhead.conf",
    "breezy.conf",
    "loggerheadd",
]

[tool.setuptools.package-data]
loggerhead = [
    "static/css/*.css",
    "static/images/*",
    "static/javascript/*.js",
    "templates/*.pt",
]
