# Copyright (C) 2008-2022 Canonical Ltd.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

[metadata]
name = loggerhead
version = 2.0.2.dev0
description = Loggerhead is a web viewer for projects in bazaar
long_description = file: README.rst
long_description_content_type = text/x-rst
license = GNU GPL v2 or later
maintainer = Michael Hudson
maintainer_email = michael.hudson@canonical.com

[options]
scripts =
    loggerhead-serve
packages =
    breezy.plugins.loggerhead
    loggerhead
    loggerhead.apps
    loggerhead.controllers
    loggerhead.middleware
    loggerhead.templates
package_dir =
    breezy.plugins.loggerhead=.
install_requires =
    Chameleon
    Paste>=1.6
    bleach
    breezy>=3.1
    importlib-metadata; python_version < "3.8"
    packaging

[options.data_files]
share/man/man1 =
    loggerhead-serve.1
share/doc/loggerhead =
    apache-loggerhead.conf
    breezy.conf
    loggerheadd

[options.extras_require]
proxied =
    PasteDeploy>=1.3
flup =
    flup

[options.package_data]
loggerhead =
    static/css/*.css
    static/images/*
    static/javascript/*.js
    templates/*.pt
